--- a/app/templates/load/all.html
+++ b/app/templates/load/all.html
@@ -11,7 +11,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <i class="clip-pie"></i>
-            All Loads
+            Load Board
             <div class="panel-tools">
                 <a class="btn btn-xs btn-link panel-collapse collapses" href="#">
                 </a>
