--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 <!-- Static navbar -->
 {% if user.is_authenticated() %}
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-static-top">
       <!-- start: TOP NAVIGATION CONTAINER -->
       <div class="container">
         <div class="navbar-header">
