--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -22,7 +22,7 @@
                                 </li>
                                 <li>
                                     <a href="{{ url_for('loads.all') }}">
-                                        <span class="title"> View All </span>
+                                        <span class="title"> Load Board </span>
                                     </a>
                                 </li>
                             </ul>
@@ -71,7 +71,7 @@
                             
                         </li>
                         <li>
-                            <a href="{{ url_for('static.logout') }}"><i class="fa fa-globe"></i>
+                            <a href="{{ url_for('static.logout') }}"><i class="fa fa-external-link-square"></i>
                                 <span class="title"> Logout </span>
                                 <span class="selected"></span>
                             </a>
