--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -207,7 +207,7 @@ payment processing to owner operator drivers
 			                		Nearby Carriers
 			            		</div>
 			            		<div class="panel-body">
-			            			<table id="datatable" class="table table-striped table-bordered">
+			            			<table class="table table-striped table-bordered">
 			            				<thead>
 			            					<tr>
 			            						<th>Truck</th>
@@ -260,27 +260,33 @@ payment processing to owner operator drivers
 				 									</tr>
 			 									{% endfor %}
 			 								{% else %}
-				 								{% for carrier in carriers %}
-				 								<tr class="odd gradeX">
-				 									<td><a href="{{ url_for('trucks.view', truck_id=carrier.id) }}">{{ carrier.name }}</a></td>
-				 									<td>
-				 											{% if carrier.driver is none %}
-				 												Unassigned
-				 											{% else %}
-				 												<a href="{{ url_for('drivers.view', driver_id=carrier.driver.id) }}">{{ carrier.driver.get_full_name() }}</a>
-				 											{% endif %}
-				 									</td>
-				 									{% if not is_dispatch %}
-				 										<td>{{ bid.value }}</td>
-				 									{% endif %}
-				 									
-				 									<td>
-				 										{% if is_dispatch and load.assigned_driver is none %}
-			       			 								<a href="{{ url_for('loads.assign', load_id=load.id, assign_id=carrier.id)}}" onclick="return confirm("Assign this carrier to this load?")text" class="btn btn-success btn-mini success">Assign</a>
-			       			 							{% endif %}
-			                                        </td>
-				 								</tr>
-				 								{% endfor %}
+			 									{% if carriers|length == 0 %}
+			 									<tr>
+			 										<td colspan="3">There are no trucks available for this load</td>
+			 									</tr>
+			 									{% else %}
+					 								{% for carrier in carriers %}
+					 								<tr class="odd gradeX">
+					 									<td><a href="{{ url_for('trucks.view', truck_id=carrier.id) }}">{{ carrier.name }}</a></td>
+					 									<td>
+					 											{% if carrier.driver is none %}
+					 												Unassigned
+					 											{% else %}
+					 												<a href="{{ url_for('drivers.view', driver_id=carrier.driver.id) }}">{{ carrier.driver.get_full_name() }}</a>
+					 											{% endif %}
+					 									</td>
+					 									{% if not is_dispatch %}
+					 										<td>{{ bid.value }}</td>
+					 									{% endif %}
+					 									
+					 									<td>
+					 										{% if is_dispatch and load.assigned_driver is none %}
+				       			 								<a href="{{ url_for('loads.assign', load_id=load.id, assign_id=carrier.id)}}" onclick="return confirm("Assign this carrier to this load?")text" class="btn btn-success btn-mini success">Assign</a>
+				       			 							{% endif %}
+				                                        </td>
+					 								</tr>
+					 								{% endfor %}
+					 							{% endif %}
 				 							{% endif %}
 			 							</tbody>
 			            			</table>
@@ -394,17 +400,8 @@ payment processing to owner operator drivers
 
 {% include "partials/main_javascripts.html" %}
 
-<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
+{#<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>#}
   {#<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>#}
-	<script>
-		$(document).ready(function() {
-	    	$('#datatable').dataTable( {
-	    		"oLanguage": {
-	    			"sEmptyTable": "No applicable trucks for this load"
-	    		}
-	    	});
-	    });
-	</script>
 
 
 {% endblock %}
