removed flash statements

--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -125,6 +125,7 @@ payment processing to owner operator drivers
 		            		<div class="panel-heading">
 		                		Broker
 		            		</div>
+		            		<div class="panel-body">
 		            		<table id="truck" class="table table-condensed">
 								<tbody>
 			           
@@ -142,6 +143,7 @@ payment processing to owner operator drivers
 										</tr>
 				                </tbody>
 							</table>
+						</div>
 	                	</div>
 	            	</div>
 	            	<div class="col-sm-6">
