--- a/app/templates/carrier/driver/view.html
+++ b/app/templates/carrier/driver/view.html
@@ -26,6 +26,10 @@
 						<td>{{ driver.last_name }}
 					</tr>
 					<tr>
+						<td><b>Email:</b></td>
+						<td>{{ driver.email }}
+					</tr>
+					<tr>
 						<td><b>Phone Number:</b></td>
 						<td>{{ driver.get_phone_number() }}
 					</tr>
