--- a/app/templates/carrier/driver/create.html
+++ b/app/templates/carrier/driver/create.html
@@ -34,7 +34,7 @@
 							Email
 						</label>
 						<div class="col-sm-9">
-							{{ form.email(size=50, placeholder="Last Name", class="form-control") }}
+							{{ form.email(size=50, placeholder="Email", class="form-control") }}
 						</div>
 					</div>
 					<div class="form-group">
