--- a/app/templates/carrier/driver/edit.html
+++ b/app/templates/carrier/driver/edit.html
@@ -34,7 +34,7 @@
 							Email
 						</label>
 						<div class="col-sm-9">
-							{{ form.email(size=50, placeholder="Last Name", class="form-control") }}
+							{{ form.email(size=50, placeholder="Email", class="form-control") }}
 						</div>
 					</div>
 					<div class="form-group">
@@ -48,7 +48,7 @@
 					<hr>
 					<div class="form-group">
 						<div class="col-sm-2 col-sm-offset-3">
-							<button class="btn btn-light-grey back-step btn-block">
+							<button class="btn btn-light-grey back-step btn-block" href="{{ url_for('drivers.all') }}">
 								<i class="fa fa-circle-arrow-left"></i> Cancel
 							</button>
 						</div>
